fixes overflow on frontage

--- a/app/themes/waterboys/styles/wb__home.css
+++ b/app/themes/waterboys/styles/wb__home.css
@@ -15,7 +15,7 @@
 }
 
 .wb__home-content {
-  position: absolute;
+  position: relative;
   text-align: center;
   top: 50%;
   left: 50%;
